# openai-cs-agents-demo

./: .clineignore  .coveragerc-security  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AGENT_IMPLEMENTATION_PLAN.md  BLACK_FLAKE8_CONFIGURATION.md  README.md  coverage-security.xml  docker-compose.dev.yml  proposed-upgrade-plan.md  pyproject.toml
.github/workflows/: ci-cd.yml
agents/: __init__.py
agents/defaultdiragent/: defaultdiragent_agent.py
agents/extensions/: __init__.py  handoff_prompt.py
audit/: audit_logger.py
auth/: __init__.py  jwt_auth.py  middleware.py  rbac.py  zero_credential_leakage.py
cli/: agent_cli.py
cline_docs/: activeContext.md  enterpriseUpgradeRoadmap.md  progress.md  systemPatterns.md  techContext.md
config/: settings.py
demo/: README.md
demo/data/: sample-bookings.json  seat-maps.json
demo/openapi/: sample-airline-api.yaml  weather-api.yaml
demo/scenarios/: demo-flows.json
demo/scripts/: demo-cleanup.sh  demo-runner.py  demo-setup.sh  health-check.sh
demo/ui/: demo-control-panel.tsx
docker/: Dockerfile.backend  Dockerfile.frontend
docs/: AUTOMATED_DEMO_PLAN.md  BUSINESS_INTEGRATION_EXAMPLE.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_SCAFFOLD.md
k8s/: backend-deployment.yaml  backend-service.yaml  backend-serviceaccount.yaml  namespace.yaml
mcp/: __init__.py  openapi_analyzer.py  registry.py  server_generator.py
mcp/templates/: Dockerfile.j2  README.md.j2  server_main.py.j2  setup.py.j2  test_server.py.j2
memory-bank/: activeContext.md  enterpriseUpgradeRoadmap.md  productContext.md  projectbrief.md  techContext.md
models/: __init__.py  base.py  tenant.py
monitoring/: __init__.py  health.py  telemetry.py
python-backend/: api.py
python_backend/: api.py  main.py  requirements.txt
repositories/: base.py  tenant.py
scripts/: setup.sh  test-setup.sh
security/: __init__.py  credential_lifecycle.py  credential_manager.py  env_sanitizer.py
tests/: conftest.py
tests/unit/: test_agents_extensions.py  test_api.py  test_cli.py  test_cli_agent_cli.py  test_cli_comprehensive.py  test_cli_targeted_coverage.py  test_comprehensive_coverage.py  test_config_settings.py  test_coverage_boost.py  test_env_sanitizer.py  test_exact_85_percent.py  test_final_85_percent_push.py  test_final_coverage_push.py  test_jwt_auth.py  test_main.py  test_mcp_api_endpoints.py  test_mcp_integration.py  test_mcp_registry_coverage.py  test_mcp_server_generator_coverage.py  test_models.py  test_monitoring.py  test_openapi_analyzer.py  test_python_backend.py  test_python_backend_aggressive.py  test_python_backend_coverage.py  test_python_backend_direct.py  test_python_backend_utils.py  test_tenant_model.py  test_zero_credential_leakage.py
tests/unit/security/: test_env_sanitizer.py  test_security_90_percent.py  test_security_working.py
ui/: cypress.config.ts  package.json  tsconfig.tsbuildinfo
ui/app/: globals.css
ui/components/: agent-panel.tsx  agents-list.tsx  conversation-context.tsx  mcp-server-manager.tsx  seat-map.tsx
ui/cypress/e2e/: agent-interaction.cy.ts
ui/lib/: types.ts
