[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openai-agents-enterprise"
version = "1.0.0"
description = "OpenAI Agents Enterprise Starter Template"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "OpenAI Agents Enterprise Team" },
]
keywords = ["openai", "agents", "enterprise", "mcp", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",  # PostgreSQL async driver
    "psycopg2-binary>=2.9.0",  # PostgreSQL sync driver

    # Redis
    "redis>=5.0.0",
    "hiredis>=2.2.0",

    # Security & Authentication
    "cryptography>=41.0.0",
    "passlib[bcrypt]>=1.7.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",

    # OpenAI & AI
    "openai>=1.3.0",
    "tiktoken>=0.5.0",

    # HTTP & Networking
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",

    # Configuration & Environment
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "click>=8.1.0",

    # Monitoring & Observability
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-instrumentation-fastapi>=0.42b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.42b0",
    "opentelemetry-instrumentation-redis>=0.42b0",
    "prometheus-client>=0.19.0",

    # Template Engine
    "jinja2>=3.1.0",

    # Utilities
    "python-slugify>=8.0.0",
    "pendulum>=2.1.0",  # Better datetime handling
    "structlog>=23.2.0",  # Structured logging
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",  # Parallel testing
    "factory-boy>=3.3.0",  # Test data factories
    "faker>=20.0.0",  # Fake data generation

    # Code Quality
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "bandit>=1.7.0",
    "pre-commit>=3.6.0",

    # Development Tools
    "ipython>=8.17.0",
    "ipdb>=0.13.0",
    "rich>=13.7.0",  # Better terminal output

    # Documentation
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.24.0",
]

security = [
    # Additional security tools
    "safety>=2.3.0",  # Vulnerability scanning
    "semgrep>=1.45.0",  # Static analysis
]

kubernetes = [
    # Kubernetes integration
    "kubernetes>=28.1.0",
    "kubernetes-asyncio>=28.2.0",
]

monitoring = [
    # Enhanced monitoring
    "sentry-sdk[fastapi]>=1.38.0",
    "datadog>=0.48.0",
]

[project.urls]
Homepage = "https://github.com/openai/agents-enterprise-template"
Documentation = "https://docs.agents-enterprise.com"
Repository = "https://github.com/openai/agents-enterprise-template"
Issues = "https://github.com/openai/agents-enterprise-template/issues"

[project.scripts]
agents-cli = "cli.agent_cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["security", "models", "repositories", "auth", "audit", "monitoring", "mcp", "cli", "tests"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["security", "models", "repositories", "auth", "audit", "monitoring", "mcp", "cli"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "agents.*",
    "uvicorn.*",
    "redis.*",
    "kubernetes.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=85",
]
testpaths = ["tests"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow running tests",
    "security: Security-related tests",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/.venv/*",
    "*/node_modules/*",
    "*/__pycache__/*",
    "*/migrations/*",
    "python-backend/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101", "B601"]  # Skip assert_used and shell_injection_subprocess for tests
